--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "core-js": "^2.6.5",
     "nanoid": "^4.0.2",
     "pubsub-js": "^1.9.4",
