--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
+    "axios": "^1.4.0",
     "core-js": "^2.6.5",
     "nanoid": "^4.0.2",
     "pubsub-js": "^1.9.4",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.4",
